--- a/Index.html
+++ b/Index.html
@@ -93,10 +93,36 @@
                     <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
                 </div> -->
 
-                <div class="container" style="margin: 0 auto;">
-                    <div class="owl-carousel owl-theme blog-post">
+                <div class="container">
 
-                        <div class="blog-content" data-aos="fade-left" data-aos-delay="200">
+                    <div>
+                        <img src="./assets/pfp1.jpg" alt="Perfil de instagram de luc1fer01_">
+                        <div class="blog-title">
+                            <h3>Luc1fer</h3>
+                            <a href="https://www.instagram.com/luc1fer01_/" target="_blank">
+                                <button class="btn btn-blog">
+                                    <i class="fab fa-instagram"></i>
+                                </button>
+                            </a>
+                            <span>Ceo</span>
+                        </div>
+                    </div>
+
+                    <div>
+                        <img src="./assets/pfp2.jpg" alt="Perfil de instagram de 1masson">
+                        <div class="blog-title">
+                            <h3>1masson</h3>
+                            <a href="https://www.instagram.com/1masson/" target="_blank">
+                                <button class="btn btn-blog">
+                                    <i class="fab fa-instagram"></i>
+                                </button>
+                            </a>
+                            <span>Ceo</span>
+                        </div>
+                    </div>
+                    <!-- <div class="owl-carousel owl-theme blog-post"> -->
+
+                    <!-- <div class="blog-content" data-aos="fade-left" data-aos-delay="400">
                             <img src="./assets/pfp1.jpg" alt="Perfil de instagram de luc1fer01_">
                             <div class="blog-title">
                                 <h3>Luc1fer</h3>
@@ -107,10 +133,10 @@
                                 </a>
                                 <span>Ceo</span>
                             </div>
-                        </div>
+                        </div> -->
 
 
-                        <!-- <div class="blog-content" data-aos="fade-in" data-aos-delay="200">
+                    <!-- <div class="blog-content" data-aos="fade-in" data-aos-delay="200">
                             <img src="./assets/pfp0ff.jpg" alt="Perfil de instagram de 0ffcup">
                             <div class="blog-title">
                                 <h3>0ffcup</h3>
@@ -122,7 +148,7 @@
                             </div>
                         </div> -->
 
-                        <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
+                    <!-- <div class="blog-content" data-aos="fade-right" data-aos-delay="400">
                             <img src="./assets/pfp2.jpg" alt="Perfil de instagram de 1masson">
                             <div class="blog-title">
                                 <h3>1masson</h3>
@@ -133,9 +159,9 @@
                                 </a>
                                 <span>Ceo</span>
                             </div>
-                        </div>
+                        </div> -->
 
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </section>
