--- a/Index.html
+++ b/Index.html
@@ -98,8 +98,8 @@
                     <div>
                         <img src="./assets/pfp1.jpg" alt="Perfil de instagram de luc1fer01_">
                         <div class="blog-title">
-                            <h3>Luc1fer</h3>
-                            <a href="https://www.instagram.com/luc1fer01_/" target="_blank">
+                            <h3></h3>
+                            <a href="" target="_blank">
                                 <button class="btn btn-blog">
                                     <i class="fab fa-instagram"></i>
                                 </button>
